--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,17 +2,19 @@ name: Build & publish daily forecast
 
 on:
   schedule:
-    - cron: "0 10 * * *"   # 10:00 UTC → 07:00 BRT :contentReference[oaicite:0]{index=0}
-  workflow_dispatch:        # botão “Run workflow” na interface
+    # 10:00 UTC  ≈ 07:00 BRT
+    - cron: "0 10 * * *"
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     env:
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+
     steps:
     - name: Checkout repo
-      uses: actions/checkout@v4  # :contentReference[oaicite:1]{index=1}
+      uses: actions/checkout@v4
 
     - name: Setup Node
       uses: actions/setup-node@v4
@@ -22,24 +24,25 @@ jobs:
     - name: Install deps & build site
       run: |
         npm ci
-        npm run build
+        npm run build            # gera public/index.html
 
-    # cria artefato para Pages
-    - name: Upload artifact
-      uses: actions/upload-pages-artifact@v2
+    # ⬇️ VERSÃO NOVA, sem advertência
+    - name: Upload Pages artifact
+      uses: actions/upload-pages-artifact@v3
       with:
         path: public
 
   deploy:
     needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      pages: write      # obrigatórios
+      id-token: write   #  ↑
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    permissions:
-      pages: write        # publicar
-      id-token: write     # OIDC
+
     steps:
     - name: Deploy to GitHub Pages
       id: deployment
-      uses: actions/deploy-pages@v2
+      uses: actions/deploy-pages@v4
