Add .gitignore, update package.json and package-lock.json for marked dependency, and refactor generate.js to use marked for HTML rendering

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "jacui-forecast",
   "type": "module",
   "version": "1.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "marked": "^15.0.12"
+  },
   "scripts": {
     "build": "node src/generate.js"
   }
