Disable scheduled forecast generation and update project message

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,8 @@
 name: Build & publish daily forecast
 
 on:
-  schedule:
-    - cron: "0 10 * * *"
+#  schedule:
+#    - cron: "0 10 * * *"
   workflow_dispatch:
 
 jobs:
